examples/test/testpolicy3147.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3147
  namespace: namespace187
spec:
  podSelector:
    matchLabels:
      key39: value17
      key36: value19
      key29: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value2
          key25: value47
          key19: value42
      podSelector:
        matchLabels:
          key36: value30
          key33: value11
